--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "server": "nodemon ./index.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -46,6 +47,7 @@
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "node-notifier": "^5.1.2",
+    "nodemon": "^1.17.5",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "path": "^0.12.7",
