--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "bcryptjs": "^2.4.3",
     "element-ui": "^2.4.0",
     "kcors": "^2.2.1",
     "vue": "^2.5.2",
