--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "element-ui": "^2.4.0",
     "kcors": "^2.2.1",
+    "koa-compress": "^3.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
