--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "server": "cross-env NODE_ENV=development nodemon ./index.js ",
     "build": "node build/build.js",
-    "server": "nodemon ./index.js"
+    "start": "cross-env NODE_ENV=production nodemon ./index.js "
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -36,6 +36,7 @@
     "chalk": "^2.0.1",
     "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.1.6",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
