--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "background-demo",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "周昊 <zhouhao1@corp.netease.com>",
+  "author": "duola",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
